--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8068,3 +8068,10 @@ a.text-dark:hover, a.text-dark:focus {
 .invisible {
   visibility: hidden !important;
 }
+
+
+.col-centered {
+  float: none;
+  margin-right: auto;
+  margin-left: auto;
+}
